deployment-files/kustomize/indy-node-monitor/indy-node-monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indy-node-monitor
spec:
  selector:
    app: indy-node-monitor
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
